# mxadm

./: .gitignore  Cargo.toml  README.md  devshell.toml  flake.nix
src/: commands.rs  main.rs  session.rs  util.rs
